--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "arrive": "^2.4.1",
     "async": "2.1.4",
     "dotenv": "4.0.0",
     "keystone": "4.0.0-beta.5",
     "keystone-email": "1.0.5",
     "lodash": "^4.13.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "save": "^2.3.1",
+    "waypoints": "^4.0.1"
   },
   "devDependencies": {
     "eslint": "3.15.0",
