--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "async": "2.1.4",
     "dotenv": "4.0.0",
     "howler": "^2.0.5",
-    "keystone": "4.0.0-beta.5",
+    "keystone": "^4.0.0-beta.1",
     "keystone-email": "1.0.5",
     "lodash": "^4.13.1",
     "pug": "2.0.0-beta11",
